--- a/public/styles/x.css
+++ b/public/styles/x.css
@@ -77,7 +77,7 @@ ul {
     flex-shrink: 3;
   }
 
-  .logo { display: flex; margin-right: 1rem}
+  .logo { display: flex; }
   .logo-emblem > *  { fill: var(--color-fg); }
 
   .header__mid  {
@@ -197,7 +197,7 @@ ul {
 }
 
 @keyframes blink-caret {
-  from, to { border-color: transparent }
+  from, to { border-color: transparent; }
   50% { border-color: var(--color-primary); }
 }
 
